--- a/inicio.html
+++ b/inicio.html
@@ -4,41 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="inicio.css">
-    <title>Germinaflix</title>
+    <link rel="stylesheet" href="assets/css/inicio.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
+    <title>CineFlix</title>
 </head>
 
 <body>
-    <div id="fundo"></div>
-    <div id="filtro"></div>
+    <div id="fundo">
+        <img src="assets/img/catalogo.webp" alt="">
+    </div>
+    <div id="opaco"></div>
     <main>
         <section id="topo">
-            <h1 id="logo">GERMINAFLIX</h1>
+            <h1 id="logo">CINEFLIX</h1>
             <h2 id="config">Configurações</h2>
         </section>
+
         <section id="quadrado">
+
             <h2>Seja bem-vindo ao maior site Marvete do país!</h2>
-            <div id="cadastro">
-                <div id="nome">
-                    <label for="nomeUsuario">Nome:</label>
-                    <input type="text" id="nomeVer" placeholder="Digite seu nome de usuário">
+
+            <form action="assets/pages/principal.html">
+
+                <div id="cadastro">
+
+                    <div class="campo">
+                        <input type="text" id="nome" placeholder=" " required>
+                        <label for="nome">Nome</label>
+                        <i class="bx bxs-user"></i>
+                    </div>
+
+                    <div class="campo">
+                        <input type="password" id="senha" placeholder=" " required>
+                        <label for="senha">Senha</label>
+                        <i class="bx bxs-lock-alt"></i>
+                    </div>
+
+                    <div class="campo">
+                        <input type="email" id="email" placeholder=" " required>
+                        <label for="email">E-mail</label>
+                        <i class="bx bxs-envelope-open"></i>
+                    </div>
                 </div>
-                <div id="senha">
-                    <label for="senha">Senha:</label>
-                    <input type="password" id="senhaVer" placeholder="Digite sua senha">
-                </div>
-                <div id="email">
-                    <label for="email">Email:</label>
-                    <input type="email" id="emailVer" placeholder="Digite seu email">
-                </div>
-            </div>
-            <button class="botao" onclick="entrar()"><b>Entrar</b></button>
+
+                <button class="botao" onclick="entrar()"><b>Entrar</b></button>
+            </form>
+
         </section>
+
     </main>
     <footer>
-        <h3>&copy; Germinaflix - Todos os direitos reservados &reg;</h3>
+        <h3>&copy; Erik Games - Todos os direitos reservados &reg;</h3>
     </footer>
-    <script src="inicio.js"></script>
+    
+    <script src="/assets/js/inicio.js"></script>
 </body>
 
 </html>
