Alterando nome de arquivos e layout de inicio.html

--- a/assets/pages/sobremim.html
+++ b/assets/pages/sobremim.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
-    <title>Apresentação Pessoal</title>
+    <link rel="stylesheet" href="/assets/css/sobremim.css">
+    <title>Sobre mim</title>
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
 </head>
 <body>
     <!-- Exercício - só html
@@ -18,10 +19,10 @@
     - Títulos para cada tópico
     -->
     <header class="header">
-        <h1>Sobre Mim - Erik Felipe Santos da Silva</h1>
+        <h1>Erik Felipe Santos da Silva</h1>
         <nav>
             <ul>
-                <li><a href="">Voltar</a></li>
+                <li><a href="/assets/pages/inicio.html">Voltar</a></li>
             </ul>
         </nav>
     </header>
@@ -29,9 +30,9 @@
     <h1 id="titulo">Apresentação pessoal</h1>
 
     <section id="imagens">
-        <img class="img" src="assets/img/eu e gabe.png" alt="">
-        <img class="img" src="assets/img/hideo.png" alt="">
-        <img class="img" src="assets/img/sexteto.png" alt="">
+        <img class="img" src="/assets/img/eu e gabe.png" alt="Eu e Gabriel Mendes">
+        <img class="img" src="/assets/img/hideo.png" alt="nós e Hideo">
+        <img class="img" src="/assets/img/sexteto.png" alt="Meu grupo de amigos">
     </section>
 
     <section class="topico">
