--- a/assets/pages/ultimato.html
+++ b/assets/pages/ultimato.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="/assets/css/filme.css">
+    <title>Vingadores: Ultimato</title>
 </head>
 <body>
-    
+    <header>
+        <a href="/assets/pages/inicio.html"><h1>CINEFLIX</h1></a>
+        
+        <nav id="links">
+          <ul>
+            <li>
+              <b><a style="cursor: not-allowed;">Configurações</a></b>
+            </li>
+            <li>
+              <b><a style="cursor: not-allowed;">Ajuda</a></b>
+            </li>
+            <li>
+              <b><a href="/assets/pages/sobremim.html">Sobre mim</a></b>
+            </li>
+            <li>
+              <b><a href="/index.html">Sair</a></b>
+            </li>
+          </ul>
+        </nav>
+      </header>
+
+    <img src="/assets/img/VingadoresUltimato.png" alt="Cartaz Vingadores: Ultimato">
+
 </body>
 </html>
