Adição das páginas de cada filme e deixando header transparente

--- a/assets/pages/inicio.html
+++ b/assets/pages/inicio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/css/principal.css">
+  <link rel="stylesheet" href="/assets/css/inicio.css">
   <title>Filmes e séries</title>
   <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
 </head>
@@ -43,28 +43,23 @@
       </tr>
       <tr>
         <td><a href="/assets/pages/ultimato.html"><img src="/assets/img/VingadoresUltimato.png" alt="Cartaz Vingadores: Ultimato"></a>
-          <p><b>Vingadores: Ultimato (2019)</b></p>
-          <a href="https://youtu.be/PgrmbRID0eY?si=XkZdCj9AwYrHXoLN">Trailer</a>
+          <p><b>Vingadores: Ultimato</b></p>
         </td>
 
-        <td><img src="/assets/img/VingadoresGuerraInfinita.png" alt="Cartaz Vingadores: Guerra Infinita">
-          <p><b>Vingadores: Guerra Infinita (2018)</b></p>
-          <a href="https://youtu.be/6ZfuNTqbHE8?si=MKIO_6sR1656gN2r">Trailer</a>
+        <td><a href="/assets/pages/guerraInfinita.html"><img src="/assets/img/VingadoresGuerraInfinita.png" alt="Cartaz Vingadores: Guerra Infinita"></a>
+          <p><b>Vingadores: Guerra Infinita</b></p>
         </td>
 
-        <td><img src="/assets/img/HomemAranha.png" alt="Cartaz Homem-Aranha: Sem volta para casa">
-          <p><b>Homem-Aranha: Sem <br>Volta para Casa (2021)</p>
-          <a href="https://youtu.be/JfVOs4VSpmA?si=khhkp7hVcAjV7WVU">Trailer</a>
+        <td><a href="/assets/pages/nowayhome.html"><img src="/assets/img/HomemAranha.png" alt="Cartaz Homem-Aranha: Sem volta para casa"></a>
+          <p><b>Homem-Aranha: Sem <br>Volta para Casa</p>
         </td>
 
-        <td><img src="/assets/img/VingadoresEraDeUltron.png" alt="Cartaz Vingadores: Era de Ultron">
-          <p><b>Vingadores: Era de Ultron (2015)</b></p>
-          <a href="https://youtu.be/tmeOjFno6Do?si=VrJTvBHVYSruwEYg">Trailer</a>
+        <td><a href="/assets/pages/eradeultron.html"><img src="/assets/img/VingadoresEraDeUltron.png" alt="Cartaz Vingadores: Era de Ultron"></a>
+          <p><b>Vingadores: Era de Ultron</b></p>
         </td>
 
-        <td><img src="/assets/img/Vingadores.png" alt="Cartaz Vingadores">
-          <p><b>Vingadores (2012)</b></p>
-          <a href="https://youtu.be/eOrNdBpGMv8?si=tk5t5seYoYai1DUH">Trailer</a>
+        <td><a href="/assets/pages/vingadores.html"><img src="/assets/img/Vingadores.png" alt="Cartaz Vingadores"></a>
+          <p><b>Vingadores</b></p>
         </td>
       </tr>
 
@@ -78,9 +73,8 @@
         <th colspan="5"><br>MAIS RECOMENDADOS</th>
       </tr>
       <tr>
-        <td>
-          <img src="/assets/img/Spiderman2.png" alt="Cartaz Homem-Aranha 2">
-          <p><b>Homem-Aranha 2 (2004)</b></p>
+        <td><a onclick="alert('É necessário fazer a melhoria do seu plano atual para acessar esse filme!')"><img src="/assets/img/Spiderman2.png" alt="Cartaz Homem-Aranha 2">
+          <p><b>Homem-Aranha 2</b></p>
         </td>
 
         <td>
