--- a/assets/pages/inicio.html
+++ b/assets/pages/inicio.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/css/inicio.css">
+  <link rel="stylesheet" href="/CineFlix/assets/css/inicio.css">
   <title>Filmes e séries</title>
   <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
 </head>
