Nova branch para fazer o deploy do site

--- a/assets/pages/nowayhome.html
+++ b/assets/pages/nowayhome.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/filme.css">
+    <link rel="stylesheet" href="/Cineflix/assets/css/filme.css">
     <title>Homem-Aranha: Sem Volta para Casa</title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/Cineflix/assets/img/favicon.png">
 </head>
 <body>
     <header>
-        <a href="/assets/pages/inicio.html"><h1>CINEFLIX</h1></a>
+        <a href="/Cineflix/assets/pages/inicio.html"><h1>CINEFLIX</h1></a>
         
         <nav id="links">
           <ul>
@@ -20,7 +20,7 @@
               <b><a style="cursor: not-allowed;">Ajuda</a></b>
             </li>
             <li>
-              <b><a href="/assets/pages/sobremim.html">Sobre mim</a></b>
+              <b><a href="/Cineflix/assets/pages/sobremim.html">Sobre mim</a></b>
             </li>
             <li>
               <b><a href="/index.html">Sair</a></b>
@@ -31,7 +31,7 @@
 
       <main>
         <div class="imagem">
-            <img src="/assets/img/HomemAranha.png" alt="Cartaz Homem-Aranha: Sem Volta para Casa">
+            <img src="/Cineflix/assets/img/HomemAranha.png" alt="Cartaz Homem-Aranha: Sem Volta para Casa">
             
             <h3>Homem-Aranha: Sem Volta para Casa (2021)</h3>
 
