--- a/assets/pages/sobremim.html
+++ b/assets/pages/sobremim.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/sobremim.css">
+    <link rel="stylesheet" href="/Cineflix/assets/css/sobremim.css">
     <title>Sobre mim</title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/Cineflix/assets/img/favicon.png">
 </head>
 <body>
     <!-- Exercício - só html
@@ -22,7 +22,7 @@
         <h1>Erik Felipe Santos da Silva</h1>
         <nav>
             <ul>
-                <li><a href="/assets/pages/inicio.html">Voltar</a></li>
+                <li><a href="/Cineflix/assets/pages/inicio.html">Voltar</a></li>
             </ul>
         </nav>
     </header>
@@ -30,9 +30,9 @@
     <h1 id="titulo">Apresentação pessoal</h1>
 
     <section id="imagens">
-        <img class="img" src="/assets/img/eu e gabe.png" alt="Eu e Gabriel Mendes">
-        <img class="img" src="/assets/img/hideo.png" alt="nós e Hideo">
-        <img class="img" src="/assets/img/sexteto.png" alt="Meu grupo de amigos">
+        <img class="img" src="/Cineflix/assets/img/eu e gabe.png" alt="Eu e Gabriel Mendes">
+        <img class="img" src="/Cineflix/assets/img/hideo.png" alt="nós e Hideo">
+        <img class="img" src="/Cineflix/assets/img/sexteto.png" alt="Meu grupo de amigos">
     </section>
 
     <section class="topico">
@@ -61,9 +61,9 @@
     <section class="topico">
         <h2>Lugares que quero conhecer</h2>
         <ol>
-            <li>NY</li>
-            <li></li>
-            <li></li>
+            <li>New York</li>
+            <li>Itália</li>
+            <li>Suiça</li>
         </ol>
     </section>
 </body>
