Adicionando informações no sobremim

--- a/assets/pages/sobremim.html
+++ b/assets/pages/sobremim.html
@@ -60,11 +60,11 @@
 
     <section class="topico">
         <h2>Lugares que quero conhecer</h2>
-        <ol>
-            <li>NY</li>
-            <li></li>
-            <li></li>
-        </ol>
+        <ul>
+            <li>New York</li>
+            <li>Itália</li>
+            <li>Suiça</li>
+        </ul>
     </section>
 </body>
 </html>
