Removendo códigos desnecessários no JS

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                 <div id="cadastro">
 
                     <div class="campo">
-                        <input type="text" id="nome" placeholder=" " required>
+                        <input type="text" id="nomeUsuario" placeholder=" " required>
                         <label for="nome">Nome</label>
                         <i class="bx bxs-user"></i>
                     </div>
 
                     <div class="campo">
-                        <input type="password" id="senha" placeholder=" " required>
+                        <input type="password" id="senhaUsuario" placeholder=" " required>
                         <label for="senha">Senha</label>
                         <i class="bx bxs-lock-alt"></i>
                     </div>
 
                     <div class="campo">
-                        <input type="email" id="email" placeholder=" " required>
+                        <input type="email" id="emailUsuario" placeholder=" " required>
                         <label for="email">E-mail</label>
                         <i class="bx bxs-envelope-open"></i>
                     </div>
@@ -60,7 +60,7 @@
         <h3>&copy; Erik Games - Todos os direitos reservados &reg;</h3>
     </footer>
     
-    <script src="/assets/js/inicio.js"></script>
+    <script src="/CineFlix/assets/js/inicio.js"></script>
 </body>
 
 </html>
