Teste do funcionamento de JS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <h2>Seja bem-vindo ao maior site Marvete do país!</h2>
 
-            <form action="assets/pages/inicio.html">
+            <form>
 
                 <div id="cadastro">
 
