Teste 2 do funcionamento de JS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <title>CineFlix</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
 
-                <button class="botao" onclick="entrar()"><b>Entrar</b></button>
+                <button class="botao" onclick="entrar(event)"><b>Entrar</b></button>
             
             </form>
         </section>
