--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     </div>
                 </div>
 
-                <button class="botao" onclick="entrar(event)"><b>Entrar</b></button>
+                <!-- <button class="botao" onclick="entrar(event)"><b>Entrar</b></button> -->
+                <a href="assets/pages/inicio.html">Entrar</a>
             
             </form>
         </section>
