--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
     <main>
         <section id="quadrado">
 
-            <h2>Seja bem-vindo ao maior site Marvete do país!
-                <br>
-                Nome: CarlosLindo
-                Senha: carlinhos123
-            </h2>
+            <h2>Seja bem-vindo ao maior site Marvete do país!</h2>
 
             <form>
 
